--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -20,6 +20,7 @@
     ]
   },
   "dependencies": {
+    "@openauthjs/openauth": "^0.2.5",
     "dedent": "^1.5.3",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
@@ -30,8 +31,9 @@
     "openai": "^4.69.0",
     "postgres": "^3.4.4",
     "resend": "^4.0.1",
+    "tldts": "^6.1.68",
     "ulidx": "^2.4.1",
-    "zod": "^3.23.8"
+    "zod": "*"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241022.0",
